set world scale to .4

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -304,7 +304,7 @@ window.onload = function () {
 
         //orbit(earth, {x: game.world.centerX, y: game.world.centerY});
         fixCamera(player.body || earth.body, earth.body);
-        game.world.scale.set(Number($('#camera-scale').value));
+        game.world.scale.set(.4);
 
      /*   if(player.alive) {
             background.tilePosition.x = player.body.x;
