--- a/webroot/index.html
+++ b/webroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Blorbit</title>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="assets/lib/socket.io-1.2.0.js"></script>
     <script src="assets/lib/phaser.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
