--- a/src/webroot/index.html
+++ b/src/webroot/index.html
@@ -18,6 +18,6 @@
         <button id="reset-button">Orbit test</button>
     </div>
     <div id="blorbit"></div>
-    <script src="assets/js/app.js"></script>
 </body>
+    <script src="/app.js"></script>
 </html>
